# waiter_di_sample

./: Cargo.toml  readme.md
src/: main.rs
src/abst/: mod.rs  t_user_repo.rs
src/di/: di_container.rs  mod.rs
src/implementation/: mod.rs  user_repo.rs
src/services/: mod.rs  user_service.rs
