[package]
name = "dependency-injection-poc"
version = "0.1.0"
authors = ["Paolo Posso <pvictorsys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waiter_di = { version = "1.6.2" }
config = "0.10.1"
tokio = { version = "0.3.3", features = ["full"] }
